- draft for porting groupfinding to sql storage